# python-tarot

./: .gitignore  Procfile  README.md  TODO.md  app.py  pyproject.toml  requirements.txt  run.py
tests/: conftest.py  test_setup_validation.py
webapp/: __init__.py  cards.py  deck.py  routes.py  views.py
webapp/static/css/: base.css  bootstrap.css  card.css  spread.css  starter-template.css
webapp/static/json/: cards.json  reading-list.json
webapp/templates/: all_cards.html  base.html  card.html  index.html  one_card.html  quiz.html  reading_list.html  specific_card.html  spread.html  tarot_study.html  three_cards.html
